--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "serve": "concurrently \"react-scripts start\" \"json-server --watch src/data/data.json --port 6969"
+    "serve": "concurrently \"npm run dev\" \"json-server --watch data/data.json --port 6969"
   },
   "dependencies": {
-    "concurrently": "^7.6.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
+    "@aleksasdev/validation-form": "^1.1.1",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "concurrently": "^7.6.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.0",
     "vite": "^4.0.0"
   }
 }
