--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "serve": "concurrently \"npm run dev\" \"json-server --watch data/data.json --port 6969"
   },
   "dependencies": {
+    "@aleksasdev/json-api": "^0.0.0",
     "@aleksasdev/validation-form": "^1.1.2",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
     "concurrently": "^7.6.0",
+    "nanoid": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
